src/main/antlr4/gen2/DmytroMockDSLParser.java
// Generated from DmytroMockDSL.g4 by ANTLR 4.13.2
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue", "this-escape"})
public class DmytroMockDSLParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, T__20=21, T__21=22, T__22=23, T__23=24, 
		T__24=25, T__25=26, T__26=27, T__27=28, T__28=29, T__29=30, T__30=31, 
		T__31=32, T__32=33, T__33=34, T__34=35, T__35=36, T__36=37, T__37=38, 
		T__38=39, T__39=40, T__40=41, T__41=42, T__42=43, T__43=44, T__44=45, 
		T__45=46, T__46=47, T__47=48, T__48=49, T__49=50, T__50=51, T__51=52, 
		T__52=53, T__53=54, T__54=55, T__55=56, T__56=57, T__57=58, T__58=59, 
		T__59=60, T__60=61, T__61=62, T__62=63, T__63=64, T__64=65, T__65=66, 
		T__66=67, T__67=68, T__68=69, T__69=70, T__70=71, T__71=72, T__72=73, 
		T__73=74, T__74=75, T__75=76, T__76=77, T__77=78, T__78=79, T__79=80, 
		T__80=81, T__81=82, T__82=83, T__83=84, T__84=85, T__85=86, T__86=87, 
		T__87=88, T__88=89, T__89=90, T__90=91, T__91=92, T__92=93, T__93=94, 
		T__94=95, T__95=96, T__96=97, T__97=98, T__98=99, T__99=100, T__100=101, 
		T__101=102, T__102=103, T__103=104, T__104=105, T__105=106, T__106=107, 
		T__107=108, STRING=109, NUMBER=110, BOOLEAN=111, LINE_COMMENT=112, BLOCK_COMMENT=113, 
		WS=114;
	public static final int
		RULE_endpointDefinitionRequest = 0, RULE_requestDefinition = 1, RULE_responseDefinition = 2, 
		RULE_directResponseDefinition = 3, RULE_setResponseBodyTypeCommand = 4, 
		RULE_responseBodyTypes = 5, RULE_setDynamicResponseTemplatingCommand = 6, 
		RULE_setResponseStatusCodeCommand = 7, RULE_faultResponseDefinition = 8, 
		RULE_setFaultTypeCommand = 9, RULE_faultTypes = 10, RULE_proxyResponseDefinition = 11, 
		RULE_setHostnameRewritingCommand = 12, RULE_setTemplatingCommand = 13, 
		RULE_responseDelay = 14, RULE_responseWebHooks = 15, RULE_webHookDefinition = 16, 
		RULE_responseHeaders = 17, RULE_responseHeader = 18, RULE_setUrlCommand = 19, 
		RULE_timeUnits = 20, RULE_noDelay = 21, RULE_fixedDelay = 22, RULE_randomUniformDelay = 23, 
		RULE_randomLogNormalDelay = 24, RULE_chunkedDribbleDelay = 25, RULE_setEndpointDescriptionCommand = 26, 
		RULE_setHttpMethodCommand = 27, RULE_setUrlMatchTypeCommand = 28, RULE_setPathCommand = 29, 
		RULE_setPriorityCommand = 30, RULE_requestQueryParams = 31, RULE_requestQueryParamRule = 32, 
		RULE_requestHeaders = 33, RULE_requestHeaderRule = 34, RULE_requestCookies = 35, 
		RULE_requestCookieRule = 36, RULE_requestFormParams = 37, RULE_requestFormParamRule = 38, 
		RULE_requestBodyRules = 39, RULE_requestBodyRule = 40, RULE_requestBodyRuleCondition = 41, 
		RULE_neagetedGeneralRequestBodyRuleCondition = 42, RULE_generalRequestBodyRuleCondition = 43, 
		RULE_valueOnlyRequestBodyRuleCondition = 44, RULE_equalsXmlRequestBodyRuleCondition = 45, 
		RULE_equalsJsonRequestBodyRuleCondition = 46, RULE_isPresentRequestBodyRuleCondition = 47, 
		RULE_matchesJsonPathRequestBodyRuleCondition = 48, RULE_matchesXPathRequestBodyRuleCondition = 49, 
		RULE_matchesJsonPathAndXPathRequestBodyRuleConditionInnerCondition = 50, 
		RULE_negatedMatchesJsonPathAndXPathRequestBodyRuleConditionInnerCondition = 51, 
		RULE_setNameCommand = 52, RULE_setValueCommand = 53, RULE_setRequestSingleConditionTypeCommand = 54, 
		RULE_setRequestMultipleConditionTypeCommand = 55, RULE_setRequestBodyConditionTypeCommand = 56, 
		RULE_condition = 57, RULE_simpleCondition = 58, RULE_compositeCondition = 59, 
		RULE_negatedSimpleCondition = 60, RULE_negatedCompositeCondition = 61, 
		RULE_httpMethodTypes = 62, RULE_urlMatchTypes = 63, RULE_requestValueConditionTypes = 64, 
		RULE_genericConditionTypes = 65, RULE_requestCompositeConditionTypes = 66, 
		RULE_matchesJsonPathAndXPathConditionTypes = 67, RULE_isPresentConditionType = 68;
	private static String[] makeRuleNames() {
		return new String[] {
			"endpointDefinitionRequest", "requestDefinition", "responseDefinition", 
			"directResponseDefinition", "setResponseBodyTypeCommand", "responseBodyTypes", 
			"setDynamicResponseTemplatingCommand", "setResponseStatusCodeCommand", 
			"faultResponseDefinition", "setFaultTypeCommand", "faultTypes", "proxyResponseDefinition", 
			"setHostnameRewritingCommand", "setTemplatingCommand", "responseDelay", 
			"responseWebHooks", "webHookDefinition", "responseHeaders", "responseHeader", 
			"setUrlCommand", "timeUnits", "noDelay", "fixedDelay", "randomUniformDelay", 
			"randomLogNormalDelay", "chunkedDribbleDelay", "setEndpointDescriptionCommand", 
			"setHttpMethodCommand", "setUrlMatchTypeCommand", "setPathCommand", "setPriorityCommand", 
			"requestQueryParams", "requestQueryParamRule", "requestHeaders", "requestHeaderRule", 
			"requestCookies", "requestCookieRule", "requestFormParams", "requestFormParamRule", 
			"requestBodyRules", "requestBodyRule", "requestBodyRuleCondition", "neagetedGeneralRequestBodyRuleCondition", 
			"generalRequestBodyRuleCondition", "valueOnlyRequestBodyRuleCondition", 
			"equalsXmlRequestBodyRuleCondition", "equalsJsonRequestBodyRuleCondition", 
			"isPresentRequestBodyRuleCondition", "matchesJsonPathRequestBodyRuleCondition", 
			"matchesXPathRequestBodyRuleCondition", "matchesJsonPathAndXPathRequestBodyRuleConditionInnerCondition", 
			"negatedMatchesJsonPathAndXPathRequestBodyRuleConditionInnerCondition", 
			"setNameCommand", "setValueCommand", "setRequestSingleConditionTypeCommand", 
			"setRequestMultipleConditionTypeCommand", "setRequestBodyConditionTypeCommand", 
			"condition", "simpleCondition", "compositeCondition", "negatedSimpleCondition", 
			"negatedCompositeCondition", "httpMethodTypes", "urlMatchTypes", "requestValueConditionTypes", 
			"genericConditionTypes", "requestCompositeConditionTypes", "matchesJsonPathAndXPathConditionTypes", 
			"isPresentConditionType"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'DEFINE'", "'ENDPOINT'", "'{'", "'}'", "'REQUEST'", "'RESPONSE'", 
			"'ADD'", "'DIRECT'", "'SET'", "'BODY_TYPE'", "'TO'", "'JSON'", "'XML'", 
			"'HTML'", "'TEXT'", "'BASE64'", "'DYNAMIC_RESPONSE_TEMPLATING'", "'STATUS_CODE'", 
			"'FAULT'", "'FAULT_TYPE'", "'NO_FAULT'", "'CLOSE_SOCKET_WITH_NO_RESPONSE'", 
			"'SEND_BAD_HTTP_DATA_THEN_CLOSE_SOCKET'", "'SEND_200_RESPONSE_THEN_BAD_HTTP_DATA_THEN_CLOSE_SOCKET'", 
			"'PEER_CONNECTION_RESET'", "'PROXY'", "'HOSTNAME_REWRITING'", "'TEMPLATING'", 
			"'DELAY'", "'TIME_UNIT'", "'WEB_HOOKS'", "'WEB_HOOK'", "'HEADERS'", "'HEADER'", 
			"'URL'", "'MS'", "'S'", "'MIN'", "'H'", "'DELAY_TYPE'", "'NO_DELAY'", 
			"'FIXED'", "'VALUE'", "'RANDOM_UNIFORM'", "'LOWER_BOUND'", "'UPPER_BOUND'", 
			"'RANDOM_LOG_NORMAL'", "'MEDIAN_DELAY'", "'STANDART_DEVIATION'", "'CHUNKED_DRIBBLE'", 
			"'CHUNK_NUMBER'", "'TOTAL_DELAY'", "'DESCRIPTION'", "'METHOD'", "'URL_MATCH_TYPE'", 
			"'REQUEST_PATH'", "'PRIORITY'", "'QUERY_PARAMS'", "'QUERY_PARAM_RULE'", 
			"'HEADER_RULE'", "'COOKIES'", "'COOKIE_RULE'", "'FORM_PARAMS'", "'FORM_PARAM_RULE'", 
			"'REQUEST_BODY_RULES'", "'REQUEST_BODY_RULE'", "'NOT'", "'('", "')'", 
			"'EQUALS_XML'", "'ENABLE_XMLUNIT_PLACEHOLDERS'", "'EQUALS_JSON'", "'IGNORE_ARRAY_ORDER'", 
			"'IGNORE_EXTRA_ELEMENTS'", "'MATCHES_JSON_PATH'", "'MATCHES_X_PATH'", 
			"'CONDITION_TYPE'", "'NAME'", "'REQUEST_CONDITION_TYPE'", "'REQUEST_BODY_CONDITION_TYPE'", 
			"'CONDITION'", "'GET'", "'POST'", "'PUT'", "'DELETE'", "'PATCH'", "'OPTIONS'", 
			"'TRACE'", "'ANY'", "'PATH'", "'PATH_AND_QUERY'", "'PATH_AND_QUERY_REGEX'", 
			"'PATH_REGEX'", "'PATH_TEMPLATE'", "'ANY_URL'", "'EQUALS'", "'MATCHES_REGEX'", 
			"'CONTAINS'", "'MATCHES_JSON_SCHEMA'", "'MATCHES_XPATH'", "'BEFORE'", 
			"'AFTER'", "'EQUALS_DATE_TIME'", "'OR'", "'AND'", "'VALUES_INCLUDE'", 
			"'VALUES_ARE_EXACTLY'", "'IS_PRESENT'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, "STRING", "NUMBER", "BOOLEAN", "LINE_COMMENT", "BLOCK_COMMENT", 
			"WS"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "DmytroMockDSL.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public DmytroMockDSLParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class EndpointDefinitionRequestContext extends ParserRuleContext {
		public RequestDefinitionContext requestDefinition() {
			return getRuleContext(RequestDefinitionContext.class,0);
		}
		public ResponseDefinitionContext responseDefinition() {
			return getRuleContext(ResponseDefinitionContext.class,0);
		}
		public List<SetEndpointDescriptionCommandContext> setEndpointDescriptionCommand() {
			return getRuleContexts(SetEndpointDescriptionCommandContext.class);
		}
		public SetEndpointDescriptionCommandContext setEndpointDescriptionCommand(int i) {
			return getRuleContext(SetEndpointDescriptionCommandContext.class,i);
		}
		public EndpointDefinitionRequestContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_endpointDefinitionRequest; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DmytroMockDSLListener ) ((DmytroMockDSLListener)listener).enterEndpointDefinitionRequest(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DmytroMockDSLListener ) ((DmytroMockDSLListener)listener).exitEndpointDefinitionRequest(this);
		}
	}

	public final EndpointDefinitionRequestContext endpointDefinitionRequest() throws RecognitionException {
		EndpointDefinitionRequestContext _localctx = new EndpointDefinitionRequestContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_endpointDefinitionRequest);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(138);
			match(T__0);
			setState(139);
			match(T__1);
			setState(140);
			match(T__2);
			setState(144);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__8) {
				{
				{
				setState(141);
				setEndpointDescriptionCommand();
				}
				}
				setState(146);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(147);
			requestDefinition();
			setState(148);
			responseDefinition();
			setState(149);
			match(T__3);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class RequestDefinitionContext extends ParserRuleContext {
		public SetHttpMethodCommandContext setHttpMethodCommand() {
			return getRuleContext(SetHttpMethodCommandContext.class,0);
		}
		public SetUrlMatchTypeCommandContext setUrlMatchTypeCommand() {
			return getRuleContext(SetUrlMatchTypeCommandContext.class,0);
		}
		public SetPathCommandContext setPathCommand() {
			return getRuleContext(SetPathCommandContext.class,0);
		}
		public SetPriorityCommandContext setPriorityCommand() {
			return getRuleContext(SetPriorityCommandContext.class,0);
		}
		public RequestBodyRulesContext requestBodyRules() {
			return getRuleContext(RequestBodyRulesContext.class,0);
		}
		public RequestQueryParamsContext requestQueryParams() {
			return getRuleContext(RequestQueryParamsContext.class,0);
		}
		public RequestHeadersContext requestHeaders() {
			return getRuleContext(RequestHeadersContext.class,0);
		}
		public RequestCookiesContext requestCookies() {
			return getRuleContext(RequestCookiesContext.class,0);
		}
		public RequestFormParamsContext requestFormParams() {
			return getRuleContext(RequestFormParamsContext.class,0);
		}
		public RequestDefinitionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_requestDefinition; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DmytroMockDSLListener ) ((DmytroMockDSLListener)listener).enterRequestDefinition(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DmytroMockDSLListener ) ((DmytroMockDSLListener)listener).exitRequestDefinition(this);
		}
	}

	public final RequestDefinitionContext requestDefinition() throws RecognitionException {
		RequestDefinitionContext _localctx = new RequestDefinitionContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_requestDefinition);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(151);
			match(T__0);
			setState(152);
			match(T__4);
			setState(153);
			match(T__2);
			setState(154);
			setHttpMethodCommand();
			setState(155);
			setUrlMatchTypeCommand();
			setState(156);
			setPathCommand();
			setState(157);
			setPriorityCommand();
			setState(159);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T__57) {
				{
				setState(158);
				requestQueryParams();
				}
			}

			setState(162);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T__32) {
				{
				setState(161);
				requestHeaders();
				}
			}

			setState(165);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T__60) {
				{
				setState(164);
				requestCookies();
				}
			}

			setState(168);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T__62) {
				{
				setState(167);
				requestFormParams();
				}
			}

			setState(170);
			requestBodyRules();
			setState(171);
			match(T__3);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ResponseDefinitionContext extends ParserRuleContext {
		public DirectResponseDefinitionContext directResponseDefinition() {
			return getRuleContext(DirectResponseDefinitionContext.class,0);
		}
		public FaultResponseDefinitionContext faultResponseDefinition() {
			return getRuleContext(FaultResponseDefinitionContext.class,0);
		}
		public ProxyResponseDefinitionContext proxyResponseDefinition() {
			return getRuleContext(ProxyResponseDefinitionContext.class,0);
		}
		public ResponseDelayContext responseDelay() {
			return getRuleContext(ResponseDelayContext.class,0);
		}
		public ResponseWebHooksContext responseWebHooks() {
			return getRuleContext(ResponseWebHooksContext.class,0);
		}
		public ResponseDefinitionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_responseDefinition; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DmytroMockDSLListener ) ((DmytroMockDSLListener)listener).enterResponseDefinition(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DmytroMockDSLListener ) ((DmytroMockDSLListener)listener).exitResponseDefinition(this);
		}
	}

	public final ResponseDefinitionContext responseDefinition() throws RecognitionException {
		ResponseDefinitionContext _localctx = new ResponseDefinitionContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_responseDefinition);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(173);
			match(T__0);
			setState(174);
			match(T__5);
			setState(175);
			match(T__2);
			setState(179);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,5,_ctx) ) {
			case 1:
				{
				setState(176);
				directResponseDefinition();
				}
				break;
			case 2:
				{
				setState(177);
				faultResponseDefinition();
				}
				break;
			case 3:
				{
				setState(178);
				proxyResponseDefinition();
				}
				break;
			}
			setState(182);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T__28) {
				{
				setState(181);
				responseDelay();
				}
			}

			setState(185);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T__30) {
				{
				setState(184);
				responseWebHooks();
				}
			}

			setState(187);
			match(T__3);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class DirectResponseDefinitionContext extends ParserRuleContext {
		public SetResponseStatusCodeCommandContext setResponseStatusCodeCommand() {
			return getRuleContext(SetResponseStatusCodeCommandContext.class,0);
		}
		public SetResponseBodyTypeCommandContext setResponseBodyTypeCommand() {
			return getRuleContext(SetResponseBodyTypeCommandContext.class,0);
		}
		public SetValueCommandContext setValueCommand() {
			return getRuleContext(SetValueCommandContext.class,0);
		}
		public SetDynamicResponseTemplatingCommandContext setDynamicResponseTemplatingCommand() {
			return getRuleContext(SetDynamicResponseTemplatingCommandContext.class,0);
		}
		public ResponseHeadersContext responseHeaders() {
			return getRuleContext(ResponseHeadersContext.class,0);
		}
		public DirectResponseDefinitionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_directResponseDefinition; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DmytroMockDSLListener ) ((DmytroMockDSLListener)listener).enterDirectResponseDefinition(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DmytroMockDSLListener ) ((DmytroMockDSLListener)listener).exitDirectResponseDefinition(this);
		}
	}
